--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,9 @@
-.container{
-  h1 {
-    color: red;
+$color--black: #000;
+$color--white: #fff;
+
+body{
+  background-color: $color--black;
+  h1{
+    color: $color--white;
   }
 }
